Util route for 404 page

--- a/src/templates/_routes.html
+++ b/src/templates/_routes.html
@@ -57,9 +57,12 @@
                 // Splash routes
                 this.login = () => "{{url_for('splash.login')}}";
                 this.register = () => "{{url_for('splash.register_user')}}";
-                this.confirm_email_after_register = () => "{{url_for('splash.confirm_email_after_register')}}";
-                this.send_validation_email = () => "{{url_for('splash.send_validation_email')}}";
-                this.forgot_password = () => "{{url_for('splash.forgot_password')}}";
+                this.confirmEmailAfterRegister = () => "{{url_for('splash.confirm_email_after_register')}}";
+                this.sendValidationEmail = () => "{{url_for('splash.send_validation_email')}}";
+                this.forgotPassword = () => "{{url_for('splash.forgot_password')}}";
+                
+                // Util routes
+                this.errorPage = () => "{{url_for('splash.error_page')}}";
                 
                 // Logout
                 this.logout = () => "{{url_for('users.logout')}}";
