CSS refactored. Enpdpoint adjustment next

--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -17,12 +17,10 @@
     --UTubDescriptionColor: white;
 
     --spanRemoveColor: rgb(254, 115, 1);
-
 }
 
 /** HTML DOM Elements **/
 
-html,
 body {
     height: 100%;
     margin: 0;
@@ -48,531 +46,9 @@ a {
     color: aqua
 }
 
-form {
-    display: flex;
-    flex-flow: column;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    padding-right: 17px;
-    /* Increase/decrease this value for cross-browser compatibility */
-    box-sizing: content-box;
-    /* So the width will be 100% + 17px */
-}
-
-img {
-    max-width: 50%;
-}
-
-input[type=checkbox] {
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 15px;
-
-    /* -webkit-appearance: button; */
-
-    border: double 2px #00F;
-
-    background-color: #0b0095;
-    color: #FFF;
-    white-space: nowrap;
-    overflow: hidden;
-
-    width: 15px;
-    height: 15px;
-}
-
-input[type=checkbox]:checked {
-    background-color: #000;
-    border-left-color: #06F;
-    border-right-color: #06F;
-}
-
-input[type=checkbox]:hover {
-    box-shadow: 0px 0px 10px #1300ff;
-}
-
-input[type=radio] {
-    display: none;
-    background: none;
-    border: 0;
-    box-sizing: border-box;
-    box-shadow: inset 0 0 0 2px var(--deckSelectionGreen);
-    color: var(--deckSelectionGreen);
-    font-size: inherit;
-    font-weight: 700;
-    margin: 1em;
-    padding: 1em 2em;
-    text-align: center;
-    text-transform: capitalize;
-    width: 100%;
-    position: relative;
-    vertical-align: middle;
-}
-
-input[type=radio]::before,
-input[type=radio]::after {
-    box-sizing: border-box;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 /** Class specific **/
 
-/* Page display */
-
-.panel {
-    height: 100%;
-    padding-bottom: 10px;
-    overflow-y: hidden;
-}
-
-.deck {
-    width: 100%;
-    margin-top: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    background: var(--backgroundColor);
-    border: 2px solid var(--borderColor);
-    border-top: 4px solid var(--borderColor);
-    border-bottom: 4px solid var(--borderColor);
-    border-radius: 30px;
-    color: var(--deckSelectionGreen);
-    overflow: hidden;
-}
-
-.deckContent {
-    width: 100%;
-    height: 90%;
-    margin: 0px;
-    overflow: hidden;
-}
-
-/* Buttons */
-
-svg {
-    width: 30;
-    height: 30;
-}
-
-.green-clickable {
-    color: var(--splashGreen);
-}
-
-/* Tags */
-
-span.tagBadge {
-    color: var(--splashGreen);
-    background: white;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding-left: 6px;
-    padding-right: 6px;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    border-radius: 16px;
-    white-space: nowrap;
-}
-
-span.tagBadge:hover .tag-remove {
-    display: inline-block;
-    line-height: 100%;
-    height: 100%;
-    font-size: 100%;
-}
-
-.tag-remove {
-    padding: 0rem;
-    vertical-align: unset;
-    padding-left: 5px;
-    display: none;
-}
-
-.tag-remove:focus {
-    outline: none;
-    box-shadow: none;
-}
-
-/* URLs */
-
-.card {
-    background-color: var(--cardBackgroundColor);
-    height: 100%;
-    margin: 2px;
-    border: 2px solid var(--borderColor);
-    border-radius: 20px;
-    cursor: pointer;
-}
-
-.card-title {
-    color: #1abc9c;
-}
-
-.card-text {
-    color: #8c9b9d;
-}
-
-.selected {
-    border: 5px solid rgb(13, 255, 0);
-}
-
-.selectedURL {
-    border: 5px solid rgb(13, 255, 0);
-    transition: 250ms;
-}
-
-.URLString {
-    width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis
-}
-
-.col-lg-10 {
-    flex-grow: 1;
-    transition: all 250ms ease;
-}
-
-.col-lg-4 {
-    flex-shrink: 1;
-    transition: all 250ms ease;
-}
-
-.col-xl-10 {
-    flex-grow: 1;
-    transition: all 250ms ease;
-}
-
-.col-xl-3 {
-    flex-shrink: 1;
-    transition: all 250ms ease;
-}
-
-/* Users */
-
-span.user {
-    color: var(--spanRemoveColor);
-    background: white;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding-left: 6px;
-    padding-right: 6px;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    border-radius: 16px;
-    white-space: nowrap;
-}
-
-span.user:hover .user-remove {
-    display: inline-block;
-    line-height: 100%;
-    height: 100%;
-    font-size: 100%;
-}
-
-.user-remove {
-    padding: 0rem;
-    vertical-align: unset;
-    padding-left: 5px;
-    display: none;
-}
-
-.user-remove:focus {
-    outline: none;
-    box-shadow: none;
-}
-
-.close {
-    cursor: pointer;
-    display: flex;
-}
-
-.fa-arrow-down {
-    transform: rotate(0deg);
-    transition: transform 100ms linear;
-}
-
-.fa-arrow-down.open {
-    transform: rotate(-90deg);
-    transition: transform 100ms linear;
-}
-
-/* Icon 1 */
-
-.animated-icon1,
-.animated-icon2,
-.animated-icon3 {
-    width: 30px;
-    height: 20px;
-    position: relative;
-    margin: 0px;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-.animated-icon1 span,
-.animated-icon2 span,
-.animated-icon3 span {
-    display: block;
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-}
-
-.animated-icon1 span {
-    background: #e65100;
-}
-
-.animated-icon2 span {
-    background: #e3f2fd;
-}
-
-.animated-icon3 span {
-    background: #f3e5f5;
-}
-
-.animated-icon1 span:nth-child(1) {
-    top: 0px;
-}
-
-.animated-icon1 span:nth-child(2) {
-    top: 10px;
-}
-
-.animated-icon1 span:nth-child(3) {
-    top: 20px;
-}
-
-.animated-icon1.open span:nth-child(1) {
-    top: 11px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-}
-
-.animated-icon1.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-}
-
-.animated-icon1.open span:nth-child(3) {
-    top: 11px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-}
-
-/* Icon 2 */
-
-.animated-icon2 span:nth-child(1) {
-    top: 0px;
-}
-
-.animated-icon2 span:nth-child(2),
-.animated-icon2 span:nth-child(3) {
-    top: 10px;
-}
-
-.animated-icon2 span:nth-child(4) {
-    top: 20px;
-}
-
-.animated-icon2.open span:nth-child(1) {
-    top: 11px;
-    width: 0%;
-    left: 50%;
-}
-
-.animated-icon2.open span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.animated-icon2.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-
-.animated-icon2.open span:nth-child(4) {
-    top: 11px;
-    width: 0%;
-    left: 50%;
-}
-
-/* Icon 3 */
-
-.animated-icon3 span:nth-child(1) {
-    top: 0px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-}
-
-.animated-icon3 span:nth-child(2) {
-    top: 10px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-}
-
-.animated-icon3 span:nth-child(3) {
-    top: 20px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-}
-
-.animated-icon3.open span:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    top: 0px;
-    left: 8px;
-}
-
-.animated-icon3.open span:nth-child(2) {
-    width: 0%;
-    opacity: 0;
-}
-
-.animated-icon3.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    top: 21px;
-    left: 8px;
-}
-
-/* Draw transition */
-.draw {
-    transition: color 0.25s;
-}
-
-.draw::before,
-.draw::after {
-    border: 2px solid transparent;
-    width: 0;
-    height: 0;
-}
-
-.draw::before {
-    top: 0;
-    left: 0;
-}
-
-.draw::after {
-    bottom: 0;
-    right: 0;
-}
-
-.draw.active {
-    color: #f45e61;
-}
-
-.draw.active::before,
-.draw.active::after {
-    width: 100%;
-    height: 100%;
-}
-
-.draw.active::before {
-    border-top-color: #60daaa;
-    border-right-color: #60daaa;
-    transition: width 0.25s ease-out, height 0.25s ease-out 0.25s;
-}
-
-.draw.active::after {
-    border-bottom-color: #60daaa;
-    border-left-color: #60daaa;
-    transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s, height 0.25s ease-out 0.75s;
-}
-
-/* Splash page stuff */
-.bg-img {
-    background: url("splash.jpg");
-    background-size: cover;
-    min-height: 380px;
-    position: relative;
-}
-
-.email-container {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    width: 100%;
-}
-
-.container-fluid {
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
-.bg-cover {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    /* height: 100%; */
-    height: 100vh;
-}
-
-.jumbotron {
-    background: var(--offWhiteSplashBackgroundBanner);
-    padding: 6rem 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.splash-button {
-    margin-top: 10px;
-    width: 20%;
-    min-width: 250px;
-    max-width: 450px;
-    background-color: var(--splashGreen);
-    border-color: var(--splashGreen);
-}
-
-.center-brand {
-    position: absolute;
-    top: 0.875rem;
-    left: 50%;
-}
+/* Navbar */
 
 .navbar-start {
     margin-inline: 20px;
@@ -588,111 +64,18 @@ span.user:hover .user-remove {
     margin-inline-end: 5px;
 }
 
-.forgot-password-email-label,
-.login-register-label {
-    font-weight: 700;
-    font-size: 120%;
-}
-
-.forgot-password-email-label {
-    color: var(--splashLabelGreen);
-}
-
-.login-register-label {
-    color: var(--darkSplashLabelGreen);
-
-}
-
-.login-register-label {
-    padding-top: 20px;
-}
-
-.first-in-register-login-form>label {
-    padding-top: 0;
-}
-
-.modal-open {
-    height: 100%;
-}
-
-.modal-close {
-    width: auto;
-}
+/* Modals */
 
 .modal-content {
     padding: 1%;
 }
 
-.validate-email-title {
-    flex-grow: 1;
-    color: var(--splashGreen);
-    font-size: 36px;
-}
+/** ID specific **/
 
-/* Remove the scroll bar from login/register forms */
-.login-register-form {
-    overflow-y: hidden;
-    padding-right: 0px;
-}
+/* Navbar */
 
-.login-register-form-group {
-    box-sizing: border-box;
-}
-
-.login-register-buttons {
-    display: inline-block;
-    vertical-align: top;
-    background-color: var(--splashGreen);
-    border-color: var(--splashGreen);
-}
-
-.modal-footer {
-    justify-content: center !important;
-
-}
-
-.register-login-modal-footer {
-    margin-top: 20px;
-}
-
-.validate-email-text {
-    font-family: Arial, sans-serif;
-}
-
-.forgot-password-form-group {
-    margin-bottom: 10px;
-}
-
-.alert-banner-splash-modal-hide {
-    display: none;
-}
-
-.alert-banner-splash-modal-display {
-    display: inherit;
-    margin-top: 3px !important;
-    margin-bottom: 3px !important;
-}
-
-.alert-banner-splash-modal-show {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.splash-page-links {
-    color: var(--bs-link-hover-color) !important;
-}
-
-.splash-page-links:hover {
-    color: var(--blueLinkOnHover) !important;
-}
-
-/* ID specific */
-
-#body {
-    min-height: 380px;
-    position: relative;
+#mainNavbar {
+    height: 50px;
 }
 
 #iconContainer {
@@ -703,15 +86,13 @@ span.user:hover .user-remove {
     align-items: center;
 }
 
-#mainNavbar {
-    height: 50px;
-}
-
 #u4iFavicon {
     height: 90%;
     width: auto;
     max-width: initial;
 }
+
+/* Main Page */
 
 #pageContent {
     margin: 0;
@@ -719,62 +100,6 @@ span.user:hover .user-remove {
     height: 100vh;
     padding-top: 50px;
     padding-bottom: 5px;
-}
-
-#centerPanel {
-    padding-bottom: 5px;
-}
-
-#ModalForm {
-    overflow: hidden;
-}
-
-#ValidateEmailIcon {
-    width: 48px;
-    height: 48px;
-    background-color: var(--splashGreen);
-    color: white;
-    font-size: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    /* Center horizontally */
-}
-
-#ValidateEmailText {
-    color: var(--darkGrayTextColor);
-    font-size: 18px;
-    line-height: 1.6;
-}
-
-#EmailAlertBanner {
-    color: var(--darkGrayTextColor);
-    font-size: 18px;
-    line-height: 1.6;
-    text-align: center;
-}
-
-#ForgotPasswordLink {
-    font-size: 0.75rem;
-    margin-bottom: 0;
-}
-
-#ForgotPasswordText {
-    color: black;
-}
-
-#EmailValidationFooter {
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-#CloseErrorModalButton {
-    width: 100%;
-}
-
-#SplashModalErrorContent {
-    width: 100%;
 }
 
 #NavbarNavDropdown {
