--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -16,7 +16,7 @@
     <div class="navbar-collapse collapse bg-dark" id="NavbarNavDropdown">
         <ul id="NavbarDropdowns" class="navbar-nav">
             {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
-            <li id="{{current_user.id}}" class="nav-item user">
+            <li userID="{{current_user.id}}" class="nav-item user">
                 <a class="nav-link" href="javascript:;"> Logged in as {{current_user.username}}</a>
             </li>
             <li class="nav-item">
