--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -270,9 +270,8 @@
 <script src="{{ url_for('static', filename='scripts/tags_routes.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls_routes.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/users.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/users_routes.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/dragdropswap.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/members.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/members_routes.js') }}"></script>
 
 {% endblock %}
 
