Members functionality restored.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -226,15 +226,15 @@
     </div>
 
 
-    <div id="UsersDeck" class="deck row h-50 p-3">
+    <div id="MembersDeck" class="deck row h-50 p-3">
 
         <div class="row">
             <div class="col-6 col-lg-6">
-                <h2 id="UserDeckHeader">Users</h2>
+                <h2 id="MemberDeckHeader">Members</h2>
             </div>
             <div class="col-6 col-lg-6 d-flex flex-row-reverse">
                 <!-- Add user button -->
-                <i id="addUserBtn" class="green-clickable mx-1">
+                <i id="addMemberBtn" class="green-clickable mx-1">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
                         width="30" height="30" viewBox="0 0 16 16">
                         <path
@@ -246,13 +246,13 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="UserDeckSubheader">Add a user</h5>
+            <h5 id="MemberDeckSubheader">Add a member</h5>
         </div>
 
         <div class="row deckContent">
-            <h5><u><b>Users</b></u></h5>
-            <div id="listUsers">
-                <!-- Users -->
+            <h5><u><b>Members</b></u></h5>
+            <div id="listMembers">
+                <!-- Members -->
             </div>
             <h5><u><b>Owner</b></u></h5>
             <div id="UTubOwner"></div>
