--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -135,9 +135,9 @@ span.tagBadge:hover .tag-remove {
     transition: all 250ms ease;
 }
 
-/* Users */
+/* Members */
 
-span.user {
+span.member {
     color: var(--spanRemoveColor);
     background: white;
     margin-left: 2px;
@@ -150,21 +150,21 @@ span.user {
     white-space: nowrap;
 }
 
-span.user:hover .user-remove {
+span.member:hover .member-remove {
     display: inline-block;
     line-height: 100%;
     height: 100%;
     font-size: 100%;
 }
 
-.user-remove {
+.member-remove {
     padding: 0rem;
     vertical-align: unset;
     padding-left: 5px;
     display: none;
 }
 
-.user-remove:focus {
+.member-remove:focus {
     outline: none;
     box-shadow: none;
 }
