--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -115,7 +115,7 @@
 
                     <!-- Submit edit UTub name -->
                     <i id="submitEditUTubNameBtn" class="green-clickable mx-1 py-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-check-square-fill" viewBox="0 0 16 16">
                             <path
                                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
@@ -125,7 +125,7 @@
 
                 <!-- Edit UTub button -->
                 <i id="editUTubNameBtn" class="mx-1 py-2" style="display: none; color: #545454">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path
                             d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
@@ -191,7 +191,7 @@
             <div class="col-3 col-lg-3 d-flex flex-row-reverse">
                 <!-- Edit button -->
                 <i id="editUTubDescriptionBtn" class="mx-1 py-2" style="display: none; color: #545454">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path
                             d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
@@ -201,7 +201,7 @@
                 </i>
                 <!-- Submit edit button -->
                 <i id="submitEditUTubDescriptionBtn" class="green-clickable mx-1 py-2" style="display: none">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-check-square-fill" viewBox="0 0 16 16">
                         <path
                             d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
@@ -226,15 +226,15 @@
     </div>
 
 
-    <div id="UsersDeck" class="deck row h-50 p-3">
+    <div id="MembersDeck" class="deck row h-50 p-3">
 
         <div class="row">
             <div class="col-6 col-lg-6">
-                <h2 id="UserDeckHeader">Users</h2>
+                <h2 id="MemberDeckHeader">Members</h2>
             </div>
             <div class="col-6 col-lg-6 d-flex flex-row-reverse">
                 <!-- Add user button -->
-                <i id="addUserBtn" class="green-clickable mx-1">
+                <i id="addMemberBtn" class="green-clickable mx-1">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
                         width="30" height="30" viewBox="0 0 16 16">
                         <path
@@ -246,13 +246,13 @@
 
         <div class="row">
             <!-- Subheader -->
-            <h5 id="UserDeckSubheader">Add a user</h5>
+            <h5 id="MemberDeckSubheader">Add a member</h5>
         </div>
 
         <div class="row deckContent">
-            <h5><u><b>Users</b></u></h5>
-            <div id="listUsers">
-                <!-- Users -->
+            <h5><u><b>Members</b></u></h5>
+            <div id="listMembers">
+                <!-- Members -->
             </div>
             <h5><u><b>Owner</b></u></h5>
             <div id="UTubOwner"></div>
@@ -270,9 +270,8 @@
 <script src="{{ url_for('static', filename='scripts/tags_routes.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/urls_routes.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/users.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/users_routes.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/dragdropswap.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/members.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/members_routes.js') }}"></script>
 
 {% endblock %}
 
