--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -20,7 +20,7 @@
                 <a id="userLoggedIn" class="nav-link" href="javascript:;"> Logged in as {{current_user.username}}</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('users.logout')}}">Logout</a>
+                <a id="Logout" class="nav-link" href="{{url_for('users.logout')}}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
