Members can now leave UTub individually

--- a/src/templates/modals/homeModalBase.html
+++ b/src/templates/modals/homeModalBase.html
@@ -17,8 +17,8 @@
                 <div id="confirmModalBody" class="modal-body">
                 </div>
                 <div class="modal-footer">
-                    <button id="modalDismiss" type="button" class="btn btn-default" data-dismiss="modal"></button>
-                    <button id="modalRedirect" type="button" class="btn btn-default" data-dismiss="modal"></button>
+                    <button id="modalDismiss" type="button" class="btn btn-secondary" data-dismiss="modal"></button>
+                    <button id="modalRedirect" type="button" class="btn btn-primary" data-dismiss="modal"></button>
                     <button id="modalSubmit" type="submit" class="btn btn-danger" data-dismiss="modal"></button>
                 </div>
             </form>
