--- a/src/static/styles/home.css
+++ b/src/static/styles/home.css
@@ -165,27 +165,19 @@ span.tagBadge:hover .tag-remove {
     transition: background-color 0.3s, border-color 0.3s;
 }
 
-#selectAll.selected,
+#selectAll,
 .tagFilter {
-    /*
-    display: inline-block;
-    padding: 5px 5px;
-    margin-top: 5px;
-    border-radius: 25px;
-    color: var(--tagSelectedTextColor);
-    transition: background-color 0.3s, border-color 0.3s;
-    */
     border: 2px solid var(--tagBorderColor);
     background-color: var(--tagBackgroundColorSelected);
     cursor: pointer;
 }
 
-#selectAll.selected:hover,
+#selectAll:hover,
 .tagFilter:hover {
     border-color: #aaa;
 }
 
-#selectAll,
+#selectAll.selected,
 .tagFilter.selected {
     background-color: var(--tagBackgroundColor);
     border: 2px solid var(--tagBorderColor);
@@ -193,7 +185,7 @@ span.tagBadge:hover .tag-remove {
     color: white;
 }
 
-#selectAll:hover,
+#selectAll.selected:hover,
 .tagFilter.selected:hover {
     background-color: var(--tagBackgroundColorHover);
     border-color: var(--tagBorderColor);
@@ -231,6 +223,10 @@ span.tagBadge:hover .tag-remove {
     border: 5px solid rgb(13, 255, 0);
 }
 
+.selectedURL:hover {
+    cursor: auto;
+}
+
 .URLString {
     width: 200px;
     white-space: nowrap;
@@ -266,6 +262,7 @@ span.member {
     padding-bottom: 1px;
     border-radius: 16px;
     white-space: nowrap;
+    display: inline-block;
 }
 
 span.member:hover .member-remove {
